# HomeDB

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
HomeDB/: manage.py  urls.py  wsgi.py
HomeDB/HomeDB/: asgi.py  gunicorn.py  settings.py  urls.py
HomeDB/electric/migrations/: 0002_alter_circuit_circuit_type.py  0003_alter_circuit_breaker_type_and_more.py
HomeDB/electric/models/: circuits.py
HomeDB/home/: urls.py  views.py
HomeDB/ip/models/: client_device.py  ip.py  wifi.py
HomeDB/ip/views/: wifi.py
HomeDB/mqtt/views/: index.py
HomeDB/network/: forms.py  urls.py
HomeDB/network/models/: __init__.py  client_device.py
HomeDoc/: manage.py
HomeDoc/HomeDoc/: asgi.py  settings.py  urls.py  wsgi.py
HomeDoc/electric/: forms.py
NetworkMapper/: manage.py
NetworkMapper/NetworkMapper/: asgi.py  config.py  settings.py  urls.py  wsgi.py
NetworkMapper/electric/: forms.py  urls.py
NetworkMapper/ip/: forms.py  models.py  urls.py  views.py
NetworkMapper/mqtt/: urls.py
NetworkMapper/vlan/: apps.py
common/utils/: units.py
electric/: apps.py
electric/migrations/: 0001_initial.py  0003_alter_circuit_breaker_type.py
electric/views/: __init__.py
network/: forms.py  objects.py  urls.py
network/forms/: devices.py  networking.py  rack.py
network/migrations/: 0001_initial.py  0005_infrastructuredevice_alter_networkdevice_device_type.py
network/models/: __init__.py  device.py  rack.py
network/views/: __init__.py  device.py  rack.py  vlan.py  wifi.py
(+68 files in other folders)
